<resources>
    <string name="app_name">Parcial1</string>

    <string name="app_nombre">Name</string>
    <string name="app_numero">Number</string>
    <string name="tab_lamada">Calls</string>
    <string name="tab_fav">Favorites</string>
    <string name="tab_contacto">Contacts</string>
    <string name="app_duracion">Duration</string>
    <string name="app_fecha">Date</string>
    <string name="llamada">Make Call</string>
    <string name="share">Share</string>
    <string name="busqueda">Type to search in contacts</string>
    <string name="app_permisos">P</string>
</resources>
