<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="10"
    android:orientation="horizontal">

    <Button

        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:background="@drawable/telefono" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="7"
        android:orientation="vertical"
        android:padding="10dp">


        <TextView
            android:id="@+id/calls_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_nombre"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/calls_duration"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_duracion"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/calls_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_fecha"
            android:textSize="20sp" />



    </LinearLayout>


</LinearLayout>